# python-tetris

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  client.py  colors.py  main.py  network.py  pyproject.toml  server.py  setup.cfg  spirtesheet.py  tetris.py  tetromino.py
.github/: dependabot.yml
.github/workflows/: release.yml
python_tetris/: ars  client.py  colors.py  main.py  network.py  server.py  spirtesheet.py  tetris.py  tetromino.py
