[tool.poetry]
name = "python-tetris"
version = "0.1.0"
description = ""
authors = ["akira <asa.shakira340@gmail.com>"]

[tool.poetry.scripts]
py-tetris = "python_tetris.main:main"
py-tetris-server = "python_tetris.server:main"
py-tetris-client = "python_tetris.client:main"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
