[tool.poetry]
name = "python-tetris"
version = "0.1.0"
description = ""
authors = ["akira <asa.shakira340@gmail.com>"]

[tool.poetry.scripts]
py-tetris = "python_tetris.main:main"
py-tetris-server = "python_tetris.server:main"
py-tetris-client = "python_tetris.client:main"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
pre-commit = "^3.5.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
