[metadata]
name = python-tetris
version = attr: python_tetris.__version__
description = Tetris in Python
long_description = file: README.md
long_description_content_type = text/markdown
# license = MIT
url = https://github.com/asashakira/python-tetris
author = asashakira
author_email = asa.shakira340@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pygame==2.0.2
python_requires = >= 3.7

[options.package_data]
python-tetris =
    py.typed
    ars
    # images/*

[options.entry_points]
console_scripts =
    py-tetris = python_tetris.main:main
    py-tetris-server = python_tetris.server:main
    py-tetris-client = python_tetris.client:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    isort
    setuptools>=46.4.0
    pre-commit
types =
    types-setuptools
all =
    %(dev)s
    %(types)s

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
# extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
